--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "phosphorylation-app",
   "private": true,
   "dependencies": {
-    "DataTables": "~1.10.7"
+    "DataTables": "~1.10.7",
+    "datatables-colreorder": "~1.1.3"
   }
 }
