--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "DataTables": "~1.10.7",
-    "datatables-colreorder": "~1.1.3"
+    "datatables-colreorder": "~1.1.3",
+    "datatables-bootstrap3": "*"
   }
 }
