--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,9 @@
   "name": "phosphorylation-app",
   "private": true,
   "dependencies": {
-    "DataTables": "~1.10.7",
-    "datatables-colreorder": "~1.1.3",
-    "datatables-bootstrap3": "*"
+    "datatables.net": "^1.10.12",
+    "datatables.net-bs": "^1.10.12",
+    "datatables.net-colreorder": "^1.3.2",
+    "datatables.net-colreorder-bs": "^1.3.2"
   }
 }
